Bug 440245 - Mirror axis move handle not visible on high-DPI
Summary: Mirror axis move handle not visible on high-DPI
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-07-25 05:57 UTC by Alvin Wong
Modified: 2021-07-27 07:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-07-25 05:57:13 UTC
The move handle of the horizontal/vertical mirror axis is not visible when the high-DPI scaling factor > 1.

Regression from 4.4.5
Comment 1 Alvin Wong 2021-07-26 06:14:17 UTC
Git commit 7fc78775f38deb50b5b0a97ffe7f1d88d75f3dda by Alvin Wong.
Committed on 25/07/2021 at 09:57.
Pushed by dkazakov into branch 'master'.

Fix mirror axis handle viewport constraint

- Fix axis direction so initial handle position is back to top and left,
  same as in 4.4
- Scale the bounding viewport down by the devicePixelRatio so that it
  works on high-DPI

M  +6    -4    libs/ui/canvas/kis_mirror_axis.cpp

https://invent.kde.org/graphics/krita/commit/7fc78775f38deb50b5b0a97ffe7f1d88d75f3dda
Comment 2 Alvin Wong 2021-07-27 07:13:48 UTC
Git commit ddac595d6eb5770ae5368e9a60fedf43f92f58f6 by Alvin Wong.
Committed on 27/07/2021 at 07:13.
Pushed by alvinwong into branch 'krita/5.0'.

Fix mirror axis handle viewport constraint

- Fix axis direction so initial handle position is back to top and left,
  same as in 4.4
- Scale the bounding viewport down by the devicePixelRatio so that it
  works on high-DPI


(cherry picked from commit 7fc78775f38deb50b5b0a97ffe7f1d88d75f3dda)

M  +6    -4    libs/ui/canvas/kis_mirror_axis.cpp

https://invent.kde.org/graphics/krita/commit/ddac595d6eb5770ae5368e9a60fedf43f92f58f6