Fix mirror axis handle viewport constraint

- Fix axis direction so initial handle position is back to top and left,
  same as in 4.4
- Scale the bounding viewport down by the devicePixelRatio so that it
  works on high-DPI

BUG: 440245